--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ dependencies {
 
 jar {
     manifest {
-        attributes "Main-Class": "com.github.kornilova_l.yourkit_to_flamegraph.Main"
+        attributes "Main-Class": "com.github.kornilova_l.yourkit_to_flamegraph.MainKt"
     }
     from {
         configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
